Some updates for the reproducibility
Changing the readme and some of the jupyter notebooks

--- a/FALCON_GNN_Data_Analysis.ipynb
+++ b/FALCON_GNN_Data_Analysis.ipynb
@@ -1424,7 +1424,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "f7878c43",
+   "id": "ea174b52",
    "metadata": {},
    "outputs": [
     {
@@ -1467,17 +1467,11 @@
    "source": [
     "def test_falcon_gnn_set2(input_path, params, model_path):\n",
     "    '''\n",
-    "    Trains the GNN according to Jake's parameters.\n",
-    "    FALCON_GNN stands for Fucking Awesome Linking\n",
-    "    Cohort Of Nottingham, which I just made up\n",
+    "    For testing the Dockground set 2 dataset\n",
     "    '''\n",
     "    ## Get all the NPZ files from the input_path\n",
     "\n",
     "    list_npz = [f for f in listdir(input_path) if isfile(join(input_path, f)) and f.endswith(\".npz\")]\n",
-    "    fold1_label = ['1a2k', '1e96', '1he1', '1he8', '1wq1', '1f6m', '1ma9', '2btf', '1g20', '1ku6', '1t6g', '1ugh', '1yvb', '2ckh', '3pro']\n",
-    "    fold2_label = ['1akj', '1p7q', '2bnq', '1dfj', '1nbf', '1r4m', '1xd3', '2bkr', '1gpw', '1hxy', '1u7f', '1uex', '1zy8', '2goo', '1ewy']\n",
-    "    fold3_label = ['1avw', '1bth', '1bui', '1cho', '1ezu', '1ook', '1oph', '1ppf', '1tx6', '1xx9', '2fi4', '2kai', '1r0r', '2sni', '3sic']\n",
-    "    fold4_label = ['1bvn', '1tmq', '1f51', '1fm9', '1a2y', '1g6v', '1gpq', '1jps', '1wej', '1l9b', '1s6v', '1w1i', '2a5t', '3fap']\n",
     "    \n",
     "    test_data = Single_Dataset(list_npz)\n",
     "\n",
@@ -1820,7 +1814,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "c39b73d0",
+   "id": "764115da",
    "metadata": {},
    "outputs": [
     {
@@ -1836,7 +1830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f27aa6d",
+   "id": "33c92d58",
    "metadata": {},
    "outputs": [],
    "source": []
